2011-06-23  Emil A Eklund  <eae@chromium.org>

Reviewed by Dimitri Glazkov.

        input/textarea onchange doesn't fire if value is set in key listener
        https://bugs.webkit.org/show_bug.cgi?id=63092

        Add test for text field onchange when setting the value in a key listener.

        * fast/events/onchange-setvalue-expected.txt: Added.
        * fast/events/onchange-setvalue.html: Added.
2011-06-23  Emil A Eklund  <eae@chromium.org>

        Reviewed by Darin Adler.

        input/textarea onchange doesn't fire if value is set in key listener
        https://bugs.webkit.org/show_bug.cgi?id=63092

        Change setValue implementation of HTMLInputElement and HTMLTextAreaElement to
        not call setTextAsOfLastFormControlChangeEvent unless the value truly changed.
        Thus element.value = element.value will no longer reset the state
        m_textAsOfLastFormControlChangeEvent field and suppress the change event.

        Test: fast/events/onchange-setvalue.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setValue):
        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::setValue):
        (WebCore::HTMLTextAreaElement::setNonDirtyValue):
        (WebCore::HTMLTextAreaElement::setValueCommon):

Canonical link: https://commits.webkit.org/78929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89624 268f45cc-cd09-0410-ab3c-d52691b4dbfc